# Diamond-Inheritance

./: README.md
ex00/: Car.cpp  Car.hpp  main.cpp
ex01/: CMakeLists.txt  Car_top.hpp  Parts_base.cpp  Parts_base.hpp  Wheel_mid.hpp  cr.hpp  main.cpp
mod1/ex00/: CMakeLists.txt  Car.hpp  cr.hpp  main.cpp
mod1/ex01/: CMakeLists.txt  Car.cpp  Car.hpp  SportsCar.cpp  SportsCar.hpp  main.cpp
mod1/ex02/: CMakeLists.txt  Car.cpp  Car.hpp  NotSportsCar.cpp  NotSportsCar.hpp  SportsCar.cpp  SportsCar.hpp  main.cpp
mod2/ex00/: cr.cpp
mod2/ex01/: Brand_mid.cpp  Brand_mid.hpp  Car_top.cpp  Engine_mid.cpp  Engine_mid.hpp  Wheel_mid.cpp  cr.cpp
